# elf-reader

./: .gitignore  CMakeLists.txt  bits.h  elf_64.h  elf_reader.cpp  main.cpp
lib/: log.h  reflect.h
